[package]
name = "sort-my-hat"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.100"

web-sys = {version = "0.3.77", features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window']}
